system up mysql db connected
Signed-off-by: nguem <nguemechieu@live.com>